Added exercicio 2.php

--- a/style.css
+++ b/style.css
@@ -9,10 +9,22 @@ body {
 	padding-top: 5em;
 }
 
-p{
+div {
+	padding-top: 2em;
+	padding-bottom: 2em;
+}
+*{
 	text-align: center;
 }
+h4:hover
+{
+	background-color: yellow;
+}
 
+p > h4:hover
+{
+	background-color: yellow;
+}
 div {
 }
 
